# glorp_syntax

./: Cargo.poly.toml  README.md  devenv.nix  devenv.yaml
crates/language/: Cargo.toml
crates/language/examples/: runtime_registry.rs
crates/language/src/: build.rs  bundle.rs  grammar.rs  lib.rs  loader.rs  query.rs  registry.rs  runtime_paths.rs
crates/language/src/helix/: mod.rs  tests.rs
crates/queries/: Cargo.toml
crates/queries/examples/: queries_tags.rs  rust_queries.rs
crates/queries/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax-editor/: Cargo.toml
crates/syntax-editor/examples/: editor_viewport_manager.rs
crates/syntax-editor/src/: lib.rs  sealed_source.rs  syntax.rs
crates/syntax-editor/src/highlight_cache/: mod.rs  tests.rs
crates/syntax-editor/src/manager/: mod.rs  tests.rs
crates/syntax-tree/: Cargo.toml
crates/syntax-tree/examples/: engine_basic.rs  engine_edits.rs
crates/syntax-tree/src/: config.rs  highlighter.rs  injections_query.rs  lib.rs  parse.rs  pretty_print.rs  query_iter.rs  tree_cursor.rs
crates/syntax-tree/src/locals/: mod.rs  tests.rs
crates/syntax-tree/src/session/: mod.rs
crates/syntax-tree/src/snapshot/: mod.rs
crates/syntax-tree/src/text/: mod.rs
crates/syntax/src/: highlight.rs  highlight_cache.rs  lib.rs  manager.rs  syntax.rs
crates/syntax/src/highlight_cache/: mod.rs  tests.rs
crates/syntax/src/manager/: tests.rs
crates/tree-house/: Cargo.toml
crates/tree-house/src/: config.rs  highlighter.rs  injections_query.rs  lib.rs  locals.rs  parse.rs  query_iter.rs  text_object.rs  tree_cursor.rs
crates/tree-house/src/sealed_source/: mod.rs  tests.rs
crates/tree-house/src/session/: mod.rs
crates/tree-house/src/snapshot/: mod.rs
crates/tree-house/src/text/: mod.rs
crates/tree-sitter-queries/: Cargo.toml
crates/tree-sitter-queries/examples/: queries_tags.rs  rust_queries.rs
crates/tree-sitter-queries/src/: lib.rs
