[package]
name = "liney-language"
description = "Grammar loading, query lookup, and grammar/query fetch-build helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["default-runtime-paths", "jit-grammars", "helix-runtime"]
default-runtime-paths = []
jit-grammars = ["default-runtime-paths"]
helix-runtime = ["default-runtime-paths"]

[dependencies]
cc.workspace = true
liney-syntax-tree = { path = "../syntax-tree" }
thiserror.workspace = true
tracing.workspace = true
