[package]
name = "glorp_syntax_language"
description = "Grammar loading, query lookup, and grammar/query fetch-build helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["default-runtime-paths", "jit-grammars", "helix-runtime"]
default-runtime-paths = []
jit-grammars = ["default-runtime-paths"]
helix-runtime = ["default-runtime-paths"]

[dependencies]
cc.workspace = true
glorp_syntax_tree = { path = "../syntax-tree" }
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ropey.workspace = true
tree-sitter-rust.workspace = true
