[package]
name = "glorp_syntax_queries"
description = "Reusable structural query helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glorp_syntax_tree = { path = "../syntax-tree" }
ropey.workspace = true

[dev-dependencies]
tree-sitter-rust.workspace = true
