[package]
name = "liney-syntax-editor"
description = "Syntax document state, viewport selection, and tiled highlighting on top of liney-syntax-tree"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
liney-syntax-tree = { path = "../syntax-tree" }
ropey.workspace = true
tree-sitter = { workspace = true, features = ["ropey"] }

[dev-dependencies]
tree-sitter-rust.workspace = true
