[package]
name = "glorp_syntax_editor"
description = "Syntax document state, viewport selection, and tiled highlighting on top of glorp_syntax_tree"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glorp_syntax_tree = { path = "../syntax-tree" }
ropey.workspace = true
tree-sitter = { workspace = true, features = ["ropey"] }

[dev-dependencies]
tree-sitter-rust.workspace = true
